tests/neg/i7359-e.scala
trait SAMTrait
  def first(): String
  def wait(a: Long, n: Int): Unit // error
